2010-12-03  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.h: add some syntax checking rule for duplicating predicate input
	* src/dlvhex/ModuleSyntaxChecker.cpp: add some syntax checking rule for duplicating predicate input
	* testsuite/TestModuleSyntaxChecker.cpp: new file, test case exclusively for the ModuleSyntaxChecker.cpp
	* testsuite/Makefile.am: adding TestModuleSyntaxChecker.cpp

2010-11-30  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/ModuleSyntaxChecker.h: class for syntactic checking of modular logic programs
	* include/dlvhex/HexGrammarPTToASTConverter.h: incorporate syntactic checking of modular logic programs
	* src/dlvhex/ModuleSyntaxChecker.cpp: class implementation for syntactic checking of modular logic programs
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: incorporate syntactic checking of modular logic programs
	* testsuite/TestHexParserModule.cpp: update testing case for the syntactic checking of modular logic programs
	* Committed revision 2507

	* include/dlvhex/ModuleSyntaxChecker.h: updating: retrieve predSet by sequenced
	* src/dlvhex/ModuleSyntaxChecker.cpp: updating: retrieve predSet by sequenced
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: fixing bug in detecting module header
	* testsuite/TestHexParserModule.cpp: updating test case for the syntax checker
	* Committed revision 2509.

2010-11-29  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: identifying the elements of module header
	* include/dlvhex/HexGrammar.h: adding tag to pred_decl and pred_list
	* Committed revision 2502.

	* src/dlvhex/ModuleSyntaxChecker.cpp: handle the syntactic checking of modular logic programs
	* Makefile.am: including ModuleSyntaxChecker.cpp
	* Committed revision 2504.

2010-11-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
